--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/stylesheet.css">
   <head>
     <meta charset="utf-8">
@@ -8,11 +9,27 @@
   <body>
     <div class="container">
       <header>
-        <div class="header-top"></div>
+        <div class="header-top">
+          <div class="container-logo">
+            <img src="img/natural-logo.png" alt="natural">
+            <h1>Another beautiful organic theme</h1>
+          </div>
+        </div>
         <div class="header-bottom">
+          <!-- navbar -->
           <nav>
-
+            <ul>
+              <li><a href="#">Home</a></li><!--
+              --><li><a href="#">About</a></li><!--
+              --><li><a href="#">Page templates</a></li><!--
+              --><li><a href="#">A parent page</a></li><!--
+              --><li><a href="#">Features</a></li><!--
+              --><li><a href="#">Blog</a></li><!--
+              --><li><a href="#">Contact</a></li><!--
+              -->
+            </ul>
           </nav>
+          <!-- /navbar -->
         </div>
       </header>
 
