progetto quasi completo: risolto il problema della nav, mancano footer e colonna di sinistra

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
 <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/stylesheet.css">
   <head>
@@ -35,15 +36,27 @@
 
       <main class="main-content">
         <div class="float-left col-left">
-
+          <i class="fas fa-rss-square"></i>
+          <h2>Organic Themes</h2>
+          <ul>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
+          </ul>
         </div>
         <div class="float-left col-center">
-
+          <h2 class="col-center-title">Three columns</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
         <div class="float-left col-right">
-          <div class="widget"></div>
-          <div class="widget"></div>
-          <div class="widget"></div>
+          <div class="widget"><h3>Text Widget</h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          </div>
+          <div class="widget"><h3>Text Widget</h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          </div>
+          <div class="widget"><h3>Text Widget</h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          </div>
         </div>
       </main>
 
