progetto quasi completo: finita colonna di sinistra, manca solo il footer

--- a/index.html
+++ b/index.html
@@ -36,14 +36,16 @@
 
       <main class="main-content">
         <div class="float-left col-left">
-          <i class="fas fa-rss-square"></i>
-          <h2>Organic Themes</h2>
+          <div class="col-left-header">
+            <i class="fas fa-rss-square"></i>
+            <h3>Organic Themes</h3>
+          </div>
           <ul>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
+            <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></li>
           </ul>
         </div>
         <div class="float-left col-center">
