--- a/index.html
+++ b/index.html
@@ -63,8 +63,20 @@
       </main>
 
       <footer>
-        <div class="footer-top"></div>
-        <div class="footer-bottom"></div>
+        <div class="footer-top">
+          <h4>Pagina realizzata da Mattia Pedone</h4>
+        </div>
+        <div class="footer-bottom">
+          <div class="footer-col">
+          <a href="#"><i class="fab fa-facebook-square"></i></a>
+          </div>
+          <div class="footer-col">
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </div>
+          <div class="footer-col">
+            <a href="#"><i class="fab fa-github-square"></i></a>
+          </div>
+        </div>
       </footer>
     </div>
   </body>
